<resources>
    <string name="app_name">ألف سلامة</string>
    <string name="facebook_app_id">243307506432941</string>
    <string name="user_name_hint">"اسم المستخدم او رقم الموبايل "</string>
    <string name="password">"كلمة السر "</string>
    <string name="login">دخول</string>
    <string name="registration">تسجيل مستخدم جديد</string>
    <string name="forget_password">استعادة كلمة المرور</string>
    <string name="remember_me">"تذكرني "</string>
    <string name="firstname">الاسم الاول</string>
    <string name="Secondname">"الاسم الثاني "</string>
    <string name="SurName">لقب العائلة</string>
    <string name="id">رقم البطاقة</string>
    <string name="confirmpasswrod">إعادة  كلمة  المرور</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="DateOfBirth">تاريخ  الميلاد  </string>
    <string name="male">ذكر</string>
    <string name="Female">أنثى</string>
    <string name="mobilenumber">رقم الموبايل</string>
    <string name="Home">الرئيسية</string>
    <string name="Search">كلمة البحث</string>
    <string name="governorate">المحافظة</string>
    <string name="highestRate">"الأعلي تقييما "</string>
    <string name="NearestPlace">الأقل مسافة</string>
    <string name="requestService">طلب الخدمة</string>
    <string name="ContactUs">"أتصل بنا "</string>
    <string name="MessageTitle">عنوان الرسالة</string>
    <string name="ContactType">نوع الإتصال</string>
    <string name="Message">الرسالة</string>
    <string name="Send">إرسال</string>
    <string name="Hotline">الخط الساخن</string>
    <string name="RequestAddServcieProvider">طلب اضافة جهة تعاقد</string>
    <string name="ServiceProviderName">"اسم مزود الخدمة "</string>
    <string name="Services">الخدمات</string>
    <string name="PhoneNumber">رقم الهاتف</string>
    <string name="Adress">العنوان</string>
    <string name="filterby">ترتيب حسب</string>
    <string name="ByDate">التاريخ</string>
    <string name="Service">الخدمة</string>
    <string name="totalCostTwfeer">إجمالي ما تم توفيره</string>
    <string name="requestservicedetails">تفاصيل الخدمات</string>
    <string name="Map">الخريطة</string>
    <string name="Rating">التقييم</string>
    <string name="Comments">التعليقات</string>
    <string name="ServiceProvider">مزود الخدمة</string>
    <string name="ServiceDetails">تفاصيل الخدمة</string>
    <string name="title_activity_service_location">الخريطة</string>
    <string name="emptyfileds">Please complete empty data</string>


    <string name="Error">خطأ</string>
    <string name="dialog_ok">تم</string>
    <string name="myAccount">حسابي</string>
    <string name="otherAccount">حساب الغير</string>
    <string name="Name">"الاسم "</string>
    <string name="Notes">ملاحظات</string>
    <string name="SendBook">ارسال الحجز</string>

    <string name="SucessBooking">تم تسجيل الحجز بنجاح </string>
    <string name="MyRequests">طلباتي السابقة</string>
    <string name="AboutUs">عنــــــــــا</string>
    <string name="AdvancedSearch">بحث متقدم</string>
    <string name="title_activity_home">hello</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="content_authority" translatable="false">com.marvel.android.alfsalama</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_name_error">الإيميل لا يمكن أن يكون فارغ</string>
    <string name="password_error">الرقم السري لا يمكن أن يكون فارغ</string>
    <string name="add_photo">إضافة صورة</string>
    <string name="add_service">إضافة خدمة جديدة</string>
    <string name="choose_photo">إختر صورة</string>
    <string name="take_photo">إلتقاط صورة</string>
    <string name="cancle_photo">خــــروج</string>

    <string name="arabic">عربـــي</string>
    <string name="english">إنجليــزي</string>
    <string name="subject">الموضـــوع</string>
    <string name="send_ticks">الرسائل المرسلة</string>
    <string name="edit_profile">تعديل البيانات</string>


</resources>
