<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/Home" />
        <item
            android:id="@+id/oldRequests"
            android:icon="@drawable/myrequests"
            android:title="@string/MyRequests" />
        <item
            android:id="@+id/editProfile"
            android:icon="@drawable/account_edit"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/serviceProvidor"
            android:icon="@drawable/providor_map"
            android:title="مزودين الخدمة" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="شارك" />
        <item
            android:id="@+id/contactud"
            android:icon="@drawable/callus"
            android:title="@string/ContactUs" />
        <item
            android:id="@+id/aboutUs"
            android:icon="@drawable/aboutus"
            android:title="@string/AboutUs" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="خروج" />
    </group>



</menu>
