<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".Registartion.Registration">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/logo_login"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <EditText
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/Secondname"
            android:textColorHint="@android:color/white"
            android:layout_weight="1"
            />


        <EditText
            android:id="@+id/secondname"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="3dp"
            android:drawableRight="@drawable/user"
            android:hint="@string/firstname"
            android:textColorHint="@android:color/white"
            android:layout_weight="1"

            />


    </LinearLayout>

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/SurName"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        />

    <EditText
        android:id="@+id/mobilenumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/mobilenumber"
        android:drawableRight="@drawable/mobile"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:phoneNumber="true"

        />


    <EditText
        android:id="@+id/idnumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/id"
        android:drawableRight="@drawable/id"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:numeric="decimal"

        />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:drawableRight="@drawable/pass"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:password="true"
        android:textDirection="rtl"

        />


    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/confirmpasswrod"
        android:drawableRight="@drawable/pass"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:password="true"
        android:textDirection="rtl"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/email"
        android:drawableRight="@drawable/email"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:password="true"
        android:textDirection="rtl"

        />


    <EditText
        android:id="@+id/dateofbirth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/DateOfBirth"
        android:drawableRight="@drawable/birthdate"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textDirection="rtl"
         android:enabled="false"
        />
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layoutDirection="rtl"
        android:layout_gravity="right"
        android:dividerPadding="30dp"
        android:layout_marginRight="20dp">


        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="#FFF"

            android:checked="true"/>
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:textColor="#FFF"
            android:layout_marginRight="50dp"
            />



    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/button_round_corner_withebg"
        android:textColor="#000"
        android:text="@string/registration"
        />



</LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>