<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".MyRequesteHistory.MyRequestsList">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/filter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:text="@string/filterby"
            android:textColor="#000"
          />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:text="@string/ByDate"

            android:background="@drawable/button_filter_selector"/>


        <Button
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:text="@string/Service"
            android:background="@drawable/button_filter_selector"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"

        >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/serviceporviderlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1.5"
        android:layout_centerInParent="true"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0734ff"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/totalCostTwfeer"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/totalcost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="18000"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
    </LinearLayout>


</LinearLayout>

</FrameLayout>