<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5"
    android:layoutDirection="rtl"
    tools:context=".BookingFragment.BookingFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioBookingType"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layoutDirection="rtl"
            android:layout_gravity="right"
            android:dividerPadding="30dp"
            android:layout_marginRight="20dp">

    <CheckBox
        android:id="@+id/radiotheraccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otherAccount"
        android:textColor="#000"
        android:button="@drawable/check_box_selector"

        />
    </RadioGroup>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/otheraccountLy"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/otherpersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/Name"
            android:drawableRight="@drawable/pass"
            android:textColorHint="#000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLines="1"
            android:textColor="#000"
            android:textDirection="rtl"

            />

        <EditText
            android:id="@+id/otherpersonmobilenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/mobilenumber"
            android:drawableRight="@drawable/pass"
            android:textColorHint="#000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:phoneNumber="true"
            android:maxLines="1"
            android:textColor="#000"
            android:textDirection="rtl"

            />




    </LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:text="@string/Service"
    android:textSize="20sp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:weightSum="2">



        <Spinner
            android:id="@+id/spinner"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:popupBackground="#fff"
            android:spinnerMode="dropdown"
            android:dropDownWidth="200dp"
            android:pointerIcon="arrow"
            tools:listitem="@layout/spinneritem"
            />


        <Button
            android:id="@+id/addservicerequestitembtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/plus_edit"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/serviceaddedlistviwe"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Notes"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColorHint="#000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxLines="1"
        android:textColor="#000"
        android:background="#fff"
        android:textDirection="rtl"

        />

    <Button
        android:id="@+id/sendbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/button_round_corner"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/SendBook"
        />
</LinearLayout>
    </ScrollView>
</LinearLayout>